site-to-site-vpn/azuredeploy.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "location": {
            "type": "String",
            "metadata": {
                "description": "Region where the resources will be deployed"
            },
            "defaultValue": "North Central US",
            "allowedValues": [
                "North Central US",
                "Central US",
                "East US",
                "East US 2",
                "East Asia",
                "West US",
                "West Europe",
                "Southeast Asia",
                "South Central US"                
            ]
        },
        "vpnType": {
            "type": "String",
            "metadata": {
                "description": "Route based or policy based"
            },
            "defaultValue": "RouteBased",
            "allowedValues": [
                "RouteBased",
                "PolicyBased"
            ]
        },
        "localGatewayName": {
            "type": "string",
            "defaultValue": "localGateway",
            "metadata": {
                "description": "Aribtary name for gateway resource representing "
            }
        },
        "localGatewayIpAddress": {
            "type": "string",
            "defaultValue": "143.200.128.5",
            "metadata": {
                "description": "Public IP of your StrongSwan Instance"
            }
        },
        "localAddressPrefix": {
            "type": "string",
            "defaultValue": "192.168.66.0/24",
            "metadata": {
                "description": "CIDR block representing the address space of the other network's Subnet"
            }
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "azureVnet",
            "metadata": {
                "description": "Arbitrary name for the Azure Virtual Network"
            }
        },
        "azureVNetAddressPrefix": {
            "type": "string",
            "defaultValue": "10.3.0.0/16",
            "metadata": {
                "description": "CIDR block representing the address space of the Azure VNet"
            }
        },
        "subnetName": {
            "type": "string",
            "defaultValue": "FrontEnd",
            "metadata": {
                "description": "Aribtrary name for the Azure Subnet"
            }
        },
        "subnetPrefix": {
            "type": "string",
            "defaultValue": "10.3.1.0/24",
            "metadata": {
                "description": "CIDR block for VM subnet, subset of azureVNetAddressPrefix address space"
            }
        },
        "subnetNameBack": {
            "type": "string",
            "defaultValue": "BackEnd",
            "metadata": {
                "description": "Aribtrary name for the Azure Subnet"
            }
        },
        "subnetPrefixBack": {
            "type": "string",
            "defaultValue": "10.3.2.0/24",
            "metadata": {
                "description": "CIDR block for VM subnet, subset of azureVNetAddressPrefix address space"
            }
        },
        "gatewaySubnetPrefix": {
            "type": "string",
            "defaultValue": "10.3.200.0/29",
            "metadata": {
                "description": "CIDR block for gateway subnet, subsset of azureVNetAddressPrefix address space"
            }
        },
        "gatewayPublicIPName": {
            "type": "string",
            "defaultValue": "azureGatewayIP",
            "metadata": {
                "description": "Aribtary name for public IP resource used for the new azure gateway"
            }
        },
        "gatewayName": {
            "type": "string",
            "defaultValue": "azureGateway",
            "metadata": {
                "description": "Arbitrary name for the new gateway"
            }
        },
        "connectionName": {
            "type": "string",
            "defaultValue": "Azure2Other",
            "metadata": {
                "description": "Arbitrary name for the new connection between Azure VNet and other network"
            }
        },
        "sharedKey": {
            "type": "string",
            "metadata": {
                "description": "Shared key (PSK) for IPSec tunnel"
            }
        }
        
    },
    "variables": {
        // "lowerCaseDNSName": "[toLower(parameters('dnsNameForPublicIP'))]",  
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]",
        "gatewaySubnetRef": "[concat(variables('vnetID'),'/subnets/','GatewaySubnet')]",
        "subnetRef": "[concat(variables('vnetID'),'/subnets/',parameters('subnetName'))]",
        // "networkSecurityGroupName": "[concat(variables('lowerCaseDNSName'), 'nsg')]",
        "api-version": "2015-06-15"
    },
    "resources": [
        {
            "apiVersion": "[variables('api-version')]",
            "type": "Microsoft.Network/localNetworkGateways",
            "name": "[parameters('localGatewayName')]",
            "tags": {
              "displayName": "Local Network Name"
            },
            "location": "[parameters('location')]",
            "properties": {
                "localNetworkAddressSpace": {
                    "addressPrefixes": [
                        "[parameters('localAddressPrefix')]"
                    ]
                },
                "gatewayIpAddress": "[parameters('localGatewayIpAddress')]"
            }
        },
        {
            "apiVersion": "[variables('api-version')]",
            "name": "[parameters('connectionName')]",
            "tags": {
              "displayName": "Connection Name"
              },
            "type": "Microsoft.Network/connections",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworkGateways/', parameters('gatewayName'))]",
                "[concat('Microsoft.Network/localNetworkGateways/', parameters('localGatewayName'))]"
            ],
            "properties": {
                "virtualNetworkGateway1": {
                    "id": "[resourceId('Microsoft.Network/virtualNetworkGateways', parameters('gatewayName'))]"
                },
                "localNetworkGateway2": {
                    "id": "[resourceId('Microsoft.Network/localNetworkGateways', parameters('localGatewayName'))]"
                },
                "connectionType": "IPsec",
                "routingWeight": 10,
                "sharedKey": "[parameters('sharedKey')]"
            }
        },
        {
            "apiVersion": "[variables('api-version')]",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworkName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('azureVNetAddressPrefix')]"
                    ]
                },
                "subnets": [
                  {
                    "name": "[parameters('subnetName')]",
                    "properties": {
                      "addressPrefix": "[parameters('subnetPrefix')]"
                    }
                  },
                  {
                        "name": "[parameters('subnetNameBack')]",
                        "properties": {
                            "addressPrefix": "[parameters('subnetPrefixBack')]"
                        }
                   },
                    {
                        "name": "GatewaySubnet",
                        "properties": {
                            "addressPrefix": "[parameters('gatewaySubnetPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "[variables('api-version')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[parameters('gatewayPublicIPName')]",
            "location": "[parameters('location')]",
            "properties": {
                "publicIPAllocationMethod": "Dynamic"
            }
        },
    //    {
    //  "apiVersion": "2015-05-01-preview",
    //  "type": "Microsoft.Network/networkSecurityGroups",
    //  "name": "[variables('networkSecurityGroupName')]",
    //  "location": "[variables('location')]",
    //  "properties": {
    //    "securityRules": [
    //      {
    //        "name": "ssh",
    //        "properties": {
    //          "description": "SSH port",
    //          "protocol": "Tcp",
    //          "sourcePortRange": "*",
    //          "destinationPortRange": "22",
    //          "sourceAddressPrefix": "Internet",
    //          "destinationAddressPrefix": "*",
    //          "access": "Allow",
    //          "priority": 100,
    //          "direction": "Inbound"
    //        }
    //      },
    //     {
    //        "name": "minecraft",
    //        "properties": {
    //          "description": "Minecraft server port",
    //          "protocol": "Tcp",
    //          "sourcePortRange": "*",
    //          "destinationPortRange": "25565",
    //          "sourceAddressPrefix": "Internet",
    //          "destinationAddressPrefix": "*",
    //          "access": "Allow",
    //          "priority": 101,
    //          "direction": "Inbound"
    //        }
    //      }
    //    ]
    //  }
    //},
        {
            "apiVersion": "[variables('api-version')]",
            "type": "Microsoft.Network/virtualNetworkGateways",
            "name": "[parameters('gatewayName')]",
            "location": "[parameters('location')]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIPAddresses/', parameters('gatewayPublicIPName'))]",
                "[concat('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[variables('gatewaySubnetRef')]"
                            },
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses',parameters('gatewayPublicIPName'))]"
                            }
                        },
                        "name": "vnetGatewayConfig"
                    }
                ],
                "gatewayType": "Vpn",
                "vpnType": "[parameters('vpnType')]",
                "enableBgp": "false"
            }
        }
    ]
}
